test/users/weili/raiseType3-blc.good
raiseType3-blc.chpl:1: syntax error: near 'int'
